<resources>
    <string name="app_name">SMETraceCare</string>
    <string name="package_name">com.example.smetracecare</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="select_your_image">Pilih Gambar Anda</string>
    <string name="error_message">Pesan error :</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Kata Sandi</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logoDesc">Logo</string>
    <string name="choose_your_role">Choose your role:</string>
    <string name="welcome_to">Welcome to</string>
    <string name="desc">Empowering Small Enterprises, Ensuring Care at Every step.</string>
    <string name="get_started">Get Started!</string>
    <string name="let_s_go_one_step_further">Let\'s go one step further!</string>
    <string name="admin">Admin</string>
    <string name="supplier">Supplier</string>
    <string name="umkm_batik">UMKM Batik</string>
    <string name="konsumer">Konsumer</string>
    <string name="login">Login</string>
    <string name="result">result</string>
    <string name="eightCharPass">Minimal 8 Karakter</string>
    <string name="emptyName">Nama Kosong</string>
    <string name="noMatchPass">Password Tidak Sama</string>
    <string name="register">Register</string>
    <string name="hintName">Masukan Nama Anda</string>
    <string name="hintEmail">Masukan Email Anda</string>
    <string name="hintPassword">Masukan Kata Sandi Anda</string>
    <string name="hintPhone">Masukan Nomor Telepon Anda</string>
    <string name="hintAddress">Masukan Alamat Anda</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="show_password">Show Password</string>
    <string name="wrongEmailFormat">Format Email Salah</string>
    <string name="emailTaken">Email Sudah digunakan</string>
    <string name="dont_have_asccount">Don\'t have account?</string>
    <string name="upload_product_supplier">Upload Product\n</string>
    <string name="productName">Nama Produk</string>
    <string name="NamaPembatik">Nama Pembatik</string>
    <string name="price">Harga Produk</string>
    <string name="jenisKelamin">Jenis Kelamin</string>
    <string name="kodeProduk">Kode Produk\n</string>
    <string name="namaUMKM">Nama UMKM\n</string>
    <string name="uploadImage_umkm">Unggah Gambar</string>
    <string name="description">Deskripsi</string>
    <string name="description_pembatik">Deskripsi Pembatik</string>
    <string name="uploadProduct">Unggah Produk</string>
    <string name="uploadPembatik">Unggah Pembatik</string>
    <string name="cancel">Batal\n</string>
    <string name="back">back</string>
    <string name="upload_product_umkm">Upload Produk</string>
    <string name="upload_pembatik_umkm">Upload Pembatik</string>
    <string name="profile">Profile</string>
    <string name="add_item">Add Item</string>
    <string name="supplier_name">List Supplier</string>
    <string name="product_name">List Product</string>
    <string name="pembatik_name">List Pembatik</string>
    <string name="profile_name">Profil</string>
    <string name="item_name">Item Name</string>
    <string name="item_image">Item Image</string>
    <string name="detailProduct">Detail Product</string>
    <string name="productImage">Gambar Produk</string>
    <string name="productDate">Product Date</string>
    <string name="productDescription">Deskripsi Produk</string>
    <string name="previewImage">Preview Image</string>
    <string name="back_button">Back Button</string>
    <string name="addProduct">Tambah Produk</string>
    <string name="productType">Jenis Produk</string>
    <string name="productKode">Kode Produk</string>
    <string name="productDesc">Deskripsi</string>
    <string name="space" />
    <string name="supplierProfile">Profile Supplier</string>
    <string name="profileImage">My Profile</string>
    <string name="editProduct">Edit Produk</string>
    <string name="colon">:</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="address">Alamat</string>
    <string name="phone">Nomor Telepon</string>
    <string name="save">Simpan</string>
    <string name="editProfile">Edit Profile</string>
    <string-array name="options_array">
        <item>Kain</item>
        <item>Malam</item>
        <item>Pewarna</item>
        <item>Benang</item>
        <item>Kancing</item>
    </string-array>

    <string name="titleScan_page">Scan Produk Kamu</string>
    <string name="scanQRCode">Scan QR Code</string>
    <string name="scanBatik">Scan Motif Batik</string>
    <string name="detailProduk_umkm">Detail Produk</string>
    <string name="namaProduk_umkm">Nama Produk</string>
    <string name="hargaJual_umkm">Harga Jual</string>
    <string name="kodeBarang_umkm">Kode Barang</string>
    <string name="descriptions_umkm">Deskripsi</string>
    <string name="descriptionUmkm">Deskripsi Produk\n</string>
    <string name="kodeBarangUmkm">Kode Barang</string>
    <string name="hargaJualUmkm">Harga Jual</string>
    <string name="namaProdukUmkm">Nama Produk</string>
    <string name="titikdua">:</string>
    <string name="login_supplier">Login Supplier</string>
    <string name="login_sme">Login UMKM Batik</string>
    <string name="register_supplier">Register Supplier</string>
    <string name="register_sme">Register UMKM Batik</string>
    <string name="productPrice">Harga Produk</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="uploadImage">Unggah Gambar</string>
    <string name="invalid_login">Masuk tidak Valid</string>

    <string name="noEmail">Email tidak valid</string>
    <string name="noPass">Password tidak valid</string>
    <string name="camera_permission_dialog_box_title">Camera Permission Required</string>
    <string name="camera_permission_dialog_box_message">Without accessing the camera, it is not possible to scan QR CODES</string>
    <string name="camera_permission_dialog_positive_button_text">Allow Camera</string>
    <string name="camera_permission_dialog_negetive_button_text">Cancel</string>

    <string name="image_classifier_failed">Image classifier failed to initialize</string>
    <string name="image">Gambar</string>
    <string name="analyze">Analisis</string>
    <string name="error_load">Kesalahan Memuat</string>
    <string name="no_image_uri">No Image</string>
    <string name="classification_error">classification Error</string>
    <string name="logout">Keluar</string>
    <string name="delete">Hapus</string>
    <string name="message">Pesan: </string>
    <string name="uploadWarning">Masukan gambar terlebih dahulu</string>
    <string name="uploadDescWarning">Masukan Deskripsi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Hubungi Supplier</string>
    <string name="dataSupplier">Data Supplier</string>
    <string name="addPembatik">Tambah Pembatik</string>
    <string name="pembatikStarted">Tahun Memulai</string>
    <string name="pembatikImage">Gambar Pembatik</string>
    <string name="pembatikName">Nama Pembatik</string>
    <string name="pembatikDesc">Deskripsi Pembatik</string>

</resources>