<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary"
    tools:context=".ui.WelcomeActivity">

    <FrameLayout
        android:id="@+id/welcomeFrame"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/logoDesc"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:textColor="@color/primary"
                android:textSize="25dp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintVertical_bias="0.255"
                tools:ignore="MissingConstraints,SpUsage"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/welcome"
                app:layout_constraintVertical_bias="0.255"
                tools:ignore="MissingConstraints,SpUsage"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/desc"
                android:textColor="@color/primary"
                android:textSize="14dp"
                app:layout_constraintTop_toBottomOf="@+id/app_name"
                app:layout_constraintVertical_bias="0.255"
                tools:ignore="MissingConstraints,SpUsage"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/let_s_go_one_step_further"
                android:textColor="@color/primary"
                android:textSize="14dp"
                app:layout_constraintTop_toBottomOf="@+id/desc"
                app:layout_constraintVertical_bias="0.255"
                tools:ignore="MissingConstraints,SpUsage"
                tools:layout_editor_absoluteX="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
    <!-- FrameLayout to contain CardView without padding -->
    <FrameLayout
        android:id="@+id/cardContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="249dp"
            android:background="@color/primary"
            android:padding="20dp"
            android:layout_marginBottom="-20dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="20dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/desc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/choose_your_role"
                    android:textColor="@color/tertiary"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/secondary"
                    android:text="@string/get_started"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/desc3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>